--- a/content/06-development-guidelines/07-transaction-tutorials/02-minting-transaction.mdx
+++ b/content/06-development-guidelines/07-transaction-tutorials/02-minting-transaction.mdx
@@ -52,7 +52,7 @@ Now, you need to create a token name, which has to be in hexadecimal (5465737454
 export TOKEN_NAME=54657374546F6B656E
 ```
 
-Form the transaction:
+Build the transaction:
 
 ```
 cardano-cli transaction build \
