--- a/content/06-development-guidelines/07-transaction-tutorials/04-withdraw-transaction.mdx
+++ b/content/06-development-guidelines/07-transaction-tutorials/04-withdraw-transaction.mdx
@@ -36,7 +36,7 @@ cardano-cli transaction build \
     --out-file withdrawal-tx.raw
 ```
 
-Notice that this transaction will take funds from the stake address, so it will need to be signed with the `stake.skey` file:
+Note that this transaction will take funds from the stake address, so it will need to be signed with the `stake.skey` file:
 
 ```
 cardano-cli transaction sign \
