--- a/content/06-development-guidelines/07-transaction-tutorials/05-redelegate-transaction.mdx
+++ b/content/06-development-guidelines/07-transaction-tutorials/05-redelegate-transaction.mdx
@@ -3,7 +3,7 @@ title: Redelegation
 metaTitle: Redelegation
 ---
 
-This part will show how to redelegate your stake to another stake pool. There can be multiple reasons to redelegate your stake, but the most common ones are:
+This tutorial will show how to redelegate your stake to another stake pool. There can be multiple reasons to redelegate your stake, but the most common ones are:
 
 - Original stake pool is no longer available
 - You've discovered a more convenient option
