add aiken page and drop pr speech from 'get started with smart contracts' page. also add other langs to get started page

--- a/content/12-smart-contracts/02-marlowe/01-learn-about-marlowe.mdx
+++ b/content/12-smart-contracts/02-marlowe/01-learn-about-marlowe.mdx
@@ -33,3 +33,11 @@ To get started with Marlowe, find the various resources on the updated [document
 -   [Videos](https://docs.marlowe.iohk.io/tutorials/videos)
 -   [Contract gallery](https://docs.marlowe.iohk.io/docs/examples/examples-contract-gallery)
 -   [Developer tools](https://docs.marlowe.iohk.io/docs/developer-tools/overview).
+
+## Technical specifications & documentation
+
+|Link|Description|
+|----|-----------|
+| [marlowe](https://github.com/input-output-hk/marlowe) |  Chain-agnostic Marlowe specification and reference implementation
+| [marlowe-cardano](https://github.com/input-output-hk/marlowe-cardano/) | The Cardano specific implementation of Marlowe 
+| [developer-portal](https://developers.cardano.org/docs/smart-contracts/marlowe) | Documentation for introducing Marlowe to developers | 
