--- a/content/02-new-to-cardano/10-what-is-a-smart-contract.mdx
+++ b/content/02-new-to-cardano/10-what-is-a-smart-contract.mdx
@@ -3,24 +3,16 @@ title: What is a smart contract?
 metaTitle: What is a smart contract?
 ---
 
-A _smart contract_ is an automated digital agreement, written in code, that
-tracks, verifies, and executes the binding transactions of a contract between
-various parties. The transactions of the contract are automatically executed by
-the smart contract code when predetermined conditions are met. Essentially, a
-smart contract is a short program whose inputs and outputs are transactions on a
-blockchain.
+Smart contracts on Cardano are simple programs often refered to as validator scripts in which you define custom logic. 
+They are automatically executed (by each Cardano node validating your transaction) when a transaction attempts to move funds that currently reside at the scripts address. 
+The address of each script is derived from the hash-sum of the compiled script. 
 
-Smart contracts are self executing and reliable and do not require the actions
-or presence of third parties. The smart contract code is stored on, and
-distributed across, a decentralised blockchain network, making it transparent
-and irreversible.
+Once deployed, smart contracts are immutable as a contract cannot be changed, they are distributable and tamper-proof, fast and cost effective, as there is no middle man which saves money and time.
 
-In summary, smart contracts are immutable as a contract cannot be changed, they
-are distributable and tamper-proof, fast and cost effective, as there is no
-middle man which saves money and time, and is safe due to encryption.
+## Tooling & Languages
 
 Cardano introduced smart contract support in 2021. As a multi-functional
-environment, Cardano supports the development and deployment of smart
+environment, Cardano now supports the development and deployment of smart
 contracts using such programming languages as:
 
 - **Plutus** — a purpose-built smart contract development and execution
@@ -33,15 +25,16 @@ contracts using such programming languages as:
   financial contracts that allows building contracts visually as well as in more
   traditional code. Financial institutions can use it to develop and deploy
   custom instruments for their customers and clients, for example. The Marlowe
-  language itself is now embedded in both JavaScript and Haskell offering a
+  language itself is now embedded in both JavaScript, TypeScript and Haskell offering a
   choice of editors depending on developers’ preference and skillset.
-  
-Currently, there are more smart contract languages and tools to build on Cardano. For more details, see:
+- **Aiken** - for on-chain validator scripts only: a language & toolchain favouring developer experience.
+- **OpShin** - a programming language for generic Smart Contracts based on Python. 
+- **plu-ts** - Typescript-embedded smart contract programming language and a transaction creation library.
 
-- [Plutus tooling](https://docs.cardano.org/plutus/plutus-resources/#plutustooling)
+### Further reading and related topics
+
+- [Developer Portal - Smart Contracts Overview](https://developers.cardano.org/docs/smart-contracts/)
 - [A list of community-built developer tools on Cardano](https://www.essentialcardano.io/article/a-list-of-community-built-developer-tools-on-cardano)
-
-#### Related Topics
-
+- [Plutus tooling](https://docs.cardano.org/plutus/plutus-resources/#plutustooling)
 - [Marlowe explainer](/marlowe/learn-about-marlowe)
 - [Plutus explainer](/plutus/learn-about-plutus)
