Style guide edits and minor formatting 10-what-is-a-smart-contract.mdx

--- a/content/02-new-to-cardano/10-what-is-a-smart-contract.mdx
+++ b/content/02-new-to-cardano/10-what-is-a-smart-contract.mdx
@@ -3,13 +3,11 @@ title: What is a smart contract?
 metaTitle: What is a smart contract?
 ---
 
-Smart contracts on Cardano are simple programs often refered to as validator scripts in which you define custom logic. 
-They are automatically executed (by each Cardano node validating your transaction) when a transaction attempts to move funds that currently reside at the scripts address. 
-The address of each script is derived from the hash-sum of the compiled script. 
+Smart contracts on Cardano are simple programs often referred to as validator scripts in which users define custom logic. They are automatically executed by each Cardano node validating the transaction when the transaction attempts to move funds from the script's address. The address of each script is derived from the hash-sum of the compiled script. 
 
-Once deployed, smart contracts are immutable as a contract cannot be changed, they are distributable and tamper-proof, fast and cost effective, as there is no middle man which saves money and time.
+Once deployed, smart contracts become immutable, which means they cannot be changed. They are distributable and tamper-proof, fast, and cost-effective, as there is no middleman, which saves both money and time.
 
-## Tooling & Languages
+## Tooling and languages
 
 Cardano introduced smart contract support in 2021. As a multi-functional
 environment, Cardano now supports the development and deployment of smart
@@ -27,13 +25,13 @@ contracts using such programming languages as:
   custom instruments for their customers and clients, for example. The Marlowe
   language itself is now embedded in both JavaScript, TypeScript and Haskell offering a
   choice of editors depending on developers’ preference and skillset.
-- **Aiken** - for on-chain validator scripts only: a language & toolchain favouring developer experience.
-- **OpShin** - a programming language for generic Smart Contracts based on Python. 
-- **plu-ts** - Typescript-embedded smart contract programming language and a transaction creation library.
+- **Aiken** - a language and toolchain favoring developer experience. Aiken is used for on-chain validator scripts only.
+- **OpShin** - a programming language for generic smart contracts based on Python. 
+- **plu-ts** - TypeScript-embedded smart contract programming language and a transaction creation library.
 
 ### Further reading and related topics
 
-- [Developer Portal - Smart Contracts Overview](https://developers.cardano.org/docs/smart-contracts/)
+- [Developer Portal - smart contracts overview](https://developers.cardano.org/docs/smart-contracts/)
 - [A list of community-built developer tools on Cardano](https://www.essentialcardano.io/article/a-list-of-community-built-developer-tools-on-cardano)
 - [Plutus tooling](https://docs.cardano.org/plutus/plutus-resources/#plutustooling)
 - [Marlowe explainer](/marlowe/learn-about-marlowe)
