minor update to 01-learn-about-marlowe.mdx

--- a/content/12-smart-contracts/02-marlowe/01-learn-about-marlowe.mdx
+++ b/content/12-smart-contracts/02-marlowe/01-learn-about-marlowe.mdx
@@ -34,7 +34,7 @@ To get started with Marlowe, find the various resources on the updated [document
 -   [Contract gallery](https://docs.marlowe.iohk.io/docs/examples/examples-contract-gallery)
 -   [Developer tools](https://docs.marlowe.iohk.io/docs/developer-tools/overview).
 
-## Technical specifications & documentation
+## Technical specifications and documentation
 
 |Link|Description|
 |----|-----------|
