--- a/content/12-smart-contracts/02-marlowe/01-learn-about-marlowe.mdx
+++ b/content/12-smart-contracts/02-marlowe/01-learn-about-marlowe.mdx
@@ -38,6 +38,6 @@ To get started with Marlowe, find the various resources on the updated [document
 
 |Link|Description|
 |----|-----------|
-| [marlowe](https://github.com/input-output-hk/marlowe) |  Chain-agnostic Marlowe specification and reference implementation
-| [marlowe-cardano](https://github.com/input-output-hk/marlowe-cardano/) | The Cardano specific implementation of Marlowe 
-| [developer-portal](https://developers.cardano.org/docs/smart-contracts/marlowe) | Documentation for introducing Marlowe to developers | 
+| [Marlowe](https://github.com/input-output-hk/marlowe) |  Chain-agnostic Marlowe specification and reference implementation
+| [Marlowe Cardano](https://github.com/input-output-hk/marlowe-cardano/) | The Cardano specific implementation of Marlowe 
+| [Developer Portal](https://developers.cardano.org/docs/smart-contracts/marlowe) | Documentation for introducing Marlowe to developers | 
