Address Joseph's feedback, add the plu-ts link 10-what-is-a-smart-contract.mdx

--- a/content/02-new-to-cardano/10-what-is-a-smart-contract.mdx
+++ b/content/02-new-to-cardano/10-what-is-a-smart-contract.mdx
@@ -5,7 +5,7 @@ metaTitle: What is a smart contract?
 
 Smart contracts on Cardano are simple programs often referred to as validator scripts in which users define custom logic. They are automatically executed by each Cardano node validating the transaction when the transaction attempts to move funds from the script's address. The address of each script is derived from the hash-sum of the compiled script. 
 
-Once deployed, smart contracts become immutable, which means they cannot be changed. They are distributable and tamper-proof, fast, and cost-effective, as there is no middleman, which saves both money and time.
+Once deployed, smart contracts become immutable, which means they cannot be changed. They are distributable and tamper-proof, fast, and cost-effective, as there is no intermediary, which saves both money and time.
 
 ## Tooling and languages
 
@@ -23,11 +23,11 @@ contracts using such programming languages as:
   financial contracts that allows building contracts visually as well as in more
   traditional code. Financial institutions can use it to develop and deploy
   custom instruments for their customers and clients, for example. The Marlowe
-  language itself is now embedded in both JavaScript, TypeScript and Haskell offering a
-  choice of editors depending on developers’ preference and skillset.
-- **Aiken** - a language and toolchain favoring developer experience. Aiken is used for on-chain validator scripts only.
-- **OpShin** - a programming language for generic smart contracts based on Python. 
-- **plu-ts** - TypeScript-embedded smart contract programming language and a transaction creation library.
+  language itself is now embedded in JavaScript, TypeScript, and Haskell offering a
+  choice of editors depending on developers’ preferences and skills.
+- - **[Aiken](https://aiken-lang.org/)** - a language and toolchain favoring developer experience. Aiken is used for on-chain validator scripts only. 
+- - **[OpShin](https://github.com/OpShin)** - a programming language based on Python for generic smart contracts for Cardano.
+- **[plu-ts](https://github.com/HarmonicLabs/plu-ts)** - TypeScript-embedded smart contract programming language and a transaction creation library.
 
 ### Further reading and related topics
 
