--- a/content/02-new-to-cardano/10-what-is-a-smart-contract.mdx
+++ b/content/02-new-to-cardano/10-what-is-a-smart-contract.mdx
@@ -13,26 +13,25 @@ Cardano introduced smart contract support in 2021. As a multi-functional
 environment, Cardano now supports the development and deployment of smart
 contracts using such programming languages as:
 
-- **Plutus** — a purpose-built smart contract development and execution
+- [Plutus](https://docs.cardano.org/smart-contracts/plutus/learn-about-plutus/) — a purpose-built smart contract development and execution
   platform. Plutus contracts consist of parts that run on the blockchain
   (on-chain code) and parts that run on a user’s machine (off-chain or client
   code). Plutus draws from modern language research to provide a safe,
   full-stack programming environment based on Haskell, the leading functional
   programming language.
-- **Marlowe** — a domain-specific language (DSL) for writing and executing
+- [Marlowe](https://docs.cardano.org/smart-contracts/marlowe/learn-about-marlowe/) — a domain-specific language (DSL) for writing and executing
   financial contracts that allows building contracts visually as well as in more
   traditional code. Financial institutions can use it to develop and deploy
   custom instruments for their customers and clients, for example. The Marlowe
   language itself is now embedded in JavaScript, TypeScript, and Haskell offering a
   choice of editors depending on developers’ preferences and skills.
-- - **[Aiken](https://aiken-lang.org/)** - a language and toolchain favoring developer experience. Aiken is used for on-chain validator scripts only. 
-- - **[OpShin](https://github.com/OpShin)** - a programming language based on Python for generic smart contracts for Cardano.
-- **[plu-ts](https://github.com/HarmonicLabs/plu-ts)** - TypeScript-embedded smart contract programming language and a transaction creation library.
+- [Aiken](https://aiken-lang.org/) - a language and toolchain favoring developer experience. Aiken is used for on-chain validator scripts only. 
+- [OpShin](https://github.com/OpShin) - a programming language based on Python for generic smart contracts for Cardano.
+- [plu-ts](https://github.com/HarmonicLabs/plu-ts) - TypeScript-embedded smart contract programming language and a transaction creation library.
 
 ### Further reading and related topics
 
 - [Developer Portal - smart contracts overview](https://developers.cardano.org/docs/smart-contracts/)
 - [A list of community-built developer tools on Cardano](https://www.essentialcardano.io/article/a-list-of-community-built-developer-tools-on-cardano)
-- [Plutus tooling](https://docs.cardano.org/plutus/plutus-resources/#plutustooling)
-- [Marlowe explainer](/marlowe/learn-about-marlowe)
-- [Plutus explainer](/plutus/learn-about-plutus)
+- [Plutus tooling](https://docs.cardano.org/smart-contracts/plutus/plutus-resources/#plutustooling)
+
