Refactor Cardano documents

--- a/content/08-cardano-sidechains/02-sidechain-toolkit/00-introduction.mdx
+++ b/content/08-cardano-sidechains/02-sidechain-toolkit/00-introduction.mdx
@@ -3,7 +3,7 @@ title: Introduction
 metaTitle: Introduction
 ---
 
-![sidechain-toolkit-enviorment-pic](https://user-images.githubusercontent.com/10556209/204818497-7c27e2fb-46c3-41fd-bf60-a47b0926ad9b.png)
+![sidechain-toolkit-environment-pic](https://user-images.githubusercontent.com/10556209/204818497-7c27e2fb-46c3-41fd-bf60-a47b0926ad9b.png)
 
 
 The Sidechain Toolkit is a set of components and recommendations to extend Cardano. The toolkit allows blockchain developers to deploy customizable solutions that fit their technical and social needs. The toolkit is composed of three main components:
@@ -24,4 +24,4 @@ This component is a part of the sidechain node validator. It has the responsibil
 
 The Cardano sidechain client specification is a detailed document describing the architecture, use cases, and implementation of the sidechain components. The example EVM implementation is the design and engineering result that showcases a possible implementation of the said specification.
 
-[Read technical specification](https://github.com/input-output-hk/sidechains-tooling/releases/tag/technical_spec_1.0)
+[Read technical specification](https://github.com/input-output-hk/sc-evm/blob/main/TECHNICAL_SPECIFICATION_v1.1.pdf)
