--- a/content/08-cardano-sidechains/03-proof-of-concept-evm-sidechain/07-api.mdx
+++ b/content/08-cardano-sidechains/03-proof-of-concept-evm-sidechain/07-api.mdx
@@ -13,7 +13,7 @@ The EVM sidechain testnet supports [OpenRPC](https://open-rpc.org/)'s `rpc.disco
 https://playground.open-rpc.org/?schemaUrl=http://localhost:8546
 ```
 
-# Not implemented 
+# Not implemented yet  
 
 - `eth_protocolVersion`  
 - `eth_syncing`  
