Remove irrelevant pages, style guide review.

--- a/content/08-cardano-sidechains/03-proof-of-concept-evm-sidechain.mdx
+++ b/content/08-cardano-sidechains/03-proof-of-concept-evm-sidechain.mdx
@@ -1,6 +1,6 @@
 ---
-title: Proof of Concept EVM sidechain
-metaTitle: Proof of Concept EVM sidechain
+title: Proof of concept EVM sidechain
+metaTitle: Proof of concept EVM sidechain
 ---
 
 <!-- heading no content -->
