--- a/content/08-cardano-sidechains/03-proof-of-concept-evm-sidechain/05-sidechain-token.mdx
+++ b/content/08-cardano-sidechains/03-proof-of-concept-evm-sidechain/05-sidechain-token.mdx
@@ -15,7 +15,7 @@ metaTitle: SC_Token and Test ADA
 
 IO Global has a open-sourced faucet at https://github.com/input-output-hk/sc-evm-faucet-web for testing purposes. The faucet dispenses test SC_Token that you can use to pay the gas fees on smart contracts that you run on the EVM sidechain testnet. You cannot swap the test SC_Token tokens you claim from the faucet for any other token, nor can you use them to make any purchases. 
 
-## What is Test ada?
+## What is test ada?
 
 Test ada (`tAda`) is the native token of Cardano testnets. `tAda` is required to pay for transaction fees conducted on a Cardano testnet. `tAda` carries no real world value.
 
