replace a link to multi-sig (node-wiki)

--- a/content/03-learn/04-delegation.mdx
+++ b/content/03-learn/04-delegation.mdx
@@ -26,7 +26,7 @@ address registration, and a [delegation certificate](https://docs.cardano.org/op
 requires funds, so a user setting up their first wallet will need a
 bootstrapping mechanism. This mechanism relies on the possibility of base
 addresses using a [staking key](https://github.com/input-output-hk/cardano-rosetta/tree/master/examples#staking-key-registration-and-delegation) before posting the registration certificate for that key. Note that the stake address can be based either on a single key or on
-a script such as [multi-sig](https://github.com/input-output-hk/cardano-node/blob/c6b574229f76627a058a7e559599d2fc3f40575d/doc/reference/simple-scripts.md#multisignature-scripts).
+a script such as [multi-sig](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/reference/simple-scripts.md#multi-signature-scripts).
 
 ### Delegation scheme
 
