fix a link to the nonce value

--- a/content/04-explore-cardano/05-cardano-entropy.mdx
+++ b/content/04-explore-cardano/05-cardano-entropy.mdx
@@ -33,7 +33,7 @@ In Cardano, the entropy addition mechanism works as follows: the system adds spe
 
 The epoch beginning on **Monday, April 5 at 21:44:51 UTC (epoch 258)** invoked the mechanism: in particular, the previous block hash appearing in the first block on or after **Wednesday, April 7 at 15:44:51 UTC (slot 151200 of epoch 258)** will determine the transition nonce; this will take place roughly 42 hours after the epoch has begun and thus leave six hours for the genesis delegates to cast their votes. Recalling the hash chain structure of the Ouroboros blockchain, this hash value depends on the entire blockchain up to that point.
 
-The --extra-entropy argument looks different from the _extraEntropy field displayed after a transaction is created. This difference is explained in the [nonce explanation page](./explain-nonce).
+The --extra-entropy argument looks different from the _extraEntropy field displayed after a transaction is created. This difference is explained in the [nonce explanation page](https://docs.cardano.org/explore-cardano/explain-nonce/).
 
 
 
