Update a link to node-cli-reference

--- a/content/04-explore-cardano/03-cardano-architecture.mdx
+++ b/content/04-explore-cardano/03-cardano-architecture.mdx
@@ -20,7 +20,7 @@ following components (different deployment use cases will use different
 combinations of components):
 
 - [Node](https://github.com/input-output-hk/cardano-node)
-- [Command line interface (CLI)](https://github.com/input-output-hk/cardano-node/blob/master/doc/reference/cardano-node-cli-reference.md)
+- [Command line interface (CLI)](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/reference/cardano-node-cli-reference.md)
 - [Daedalus wallet](https://github.com/input-output-hk/cardano-wallet)
 - [Cardano db-sync](https://github.com/input-output-hk/cardano-db-sync)
 - [GraphQL](https://github.com/input-output-hk/cardano-graphql) API server
@@ -113,7 +113,7 @@ chain itself.
 
 ### Command line interface (CLI)
 
-The node’s CLI tool is the “swiss army knife” of the system. It can do almost
+The node’s CLI tool is the 'swiss army knife' of the system. It can do almost
 everything, but it is quite low level and not very convenient because it’s
 text-based and lacks a graphical user interface (GUI).
 
@@ -153,6 +153,6 @@ separate component using an Structured Query Language (SQL) database.
 
 Read more about:
 
-+ [Cardano DB Sync and its components](https://docs.cardano.org/cardano-components/cardano-db-sync)
++ [Cardano DB Sync and its components](https://docs.cardano.org/cardano-components/cardano-db-sync/about-db-sync/)
 + [SMASH](https://docs.cardano.org/cardano-components/smash)
    
