--- a/content/03-learn/07-consensus-explained.mdx
+++ b/content/03-learn/07-consensus-explained.mdx
@@ -15,7 +15,7 @@ The protocol has three main responsibilities:
    
 ## About Ouroboros
 
-Cardano runs on the Ouroboros consensus protocol, which was delivered with several peer-reviewed papers presented at top-tier conferences and publications in the area of cybersecurity and cryptography. Rather than relying on 'miners' (as in proof-of-work protocols) to solve computationally complex equations to create new blocks – and rewarding the first to do so – proof of stake selects [stake pools to create new blocks](https://docs.cardano.org/new-to-cardano/cardano-nodes/#howdoesitwork) based on the stake they control in the network.
+Cardano runs on the Ouroboros consensus protocol, which was delivered with several peer-reviewed papers presented at top-tier conferences and publications in the area of cybersecurity and cryptography. Rather than relying on 'miners' (as in proof-of-work protocols) to solve computationally complex equations to create new blocks – and rewarding the first to do so – proof of stake selects [stake pools to create new blocks](https://docs.cardano.org/learn/cardano-node/#howdoesitwork) based on the stake they control in the network.
 
 ## How Ouroboros works
 
