Update a link to creating a stake pool

--- a/content/03-learn/05-pledging-rewards.mdx
+++ b/content/03-learn/05-pledging-rewards.mdx
@@ -9,7 +9,7 @@ Pledging is an important mechanism that encourages the growth of a healthy
 ecosystem within the [Cardano blockchain](https://cardano.org/). When you register a stake pool you can
 choose to pledge some, or all, of your ada to the pool, to make it more
 attractive to people that want to delegate. Although pledging is not required
-when [setting up a stake pool](https://docs.cardano.org/getting-started/operating-a-stake-pool/creating-a-stake-pool#gatsby-focus-wrapper), it can make the stake pool more attractive to delegators, as the higher the amount of ada that is pledged, the higher the
+when [setting up a stake pool](https://docs.cardano.org/operating-a-stake-pool/creating-a-stake-pool/), it can make the stake pool more attractive to delegators, as the higher the amount of ada that is pledged, the higher the
 rewards that will be paid out. The a0 protocol parameter defines the influence
 of the pledge on the pool reward.
 
