Update a link to script examples

--- a/content/05-cardano-testnet/02-about/01-testnet-introduction.mdx
+++ b/content/05-cardano-testnet/02-about/01-testnet-introduction.mdx
@@ -28,7 +28,7 @@ To get started, make sure to:
 * upgrade your [node configuration, topology, and genesis files](https://book.world.dev.cardano.org/environments.html)
 * check the ['Getting started' tutorial](/cardano-testnet/getting-started)
 * see [Vasil testnet tutorials](https://github.com/input-output-hk/Vasil-testnet)
-* see [Babbage script examples](https://github.com/input-output-hk/cardano-node/tree/master/doc/reference/plutus)
+* see [Babbage script examples](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/reference/plutus/babbage-script-example.md)
 
 Also, note that:
 
