Update node config links

--- a/content/15-tools/02-release-notes.mdx
+++ b/content/15-tools/02-release-notes.mdx
@@ -7,7 +7,7 @@ Here is the latest release information for the Cardano components.
 Component dependencies and compatibility information can be found in the [compatibility matrix](/tools/comp-matrix).
 Release notes for Cardano can be found in the [Cardano platform > Updates](https://iohk.zendesk.com/hc/en-us/sections/360002160134-Updates) section of the IOHK support desk.
 
-Cardano node configuration details (for mainnet and testnet) are available on the [Cardano node configuration page](https://hydra.iohk.io/build/7370192/download/1/index.html).
+Cardano node configuration details (for mainnet and testnets) are available on the [Cardano environments page](https://book.world.dev.cardano.org/environments.html).
 
 ## Latest Cardano component releases
 
