--- a/content/02-new-to-cardano/06-cardano-tracking-tools.mdx
+++ b/content/02-new-to-cardano/06-cardano-tracking-tools.mdx
@@ -43,7 +43,6 @@ Here is a list of other explorers to consider:
 - [AdaEx](https://adaex.org/)
 - [Adapools](https://adapools.org/)
 - [AdaStat](https://adastat.net/transactions)
-- [Adatools](https://adatools.io/transactions)
 - [Cardanoscan](https://cardanoscan.io/transactions)
 - [Cexplorer](https://cexplorer.io/)
 
@@ -54,7 +53,6 @@ assets and tokens, you can use these tools:
 
 - [Adapools](https://adapools.org/)
 - [AdaStat (tokens)](https://adastat.net/tokens)
-- [Adatools (tokens)](https://adatools.io/tokens)
 - [Cardano Assets](https://cardanoassets.com/)
 - [Cardanoscan (tokens)](https://cardanoscan.io/tokens)
 - [Pool.pm (tokens)](https://pool.pm/tokens)
@@ -67,10 +65,9 @@ IDs, you can use these tools:
 
 - [Adapools](https://adapools.org/)
 - [ADAtainment](https://www.adatainment.com/index.php?page=home&lang=en)
-- [Adatools (pools)](https://adatools.io/pools)
 - [Cardano PoolTool](https://pooltool.io/)
 - [Cardanoscan (pools)](https://cardanoscan.io/pools)
 - [Pool.pm (pools)](https://pool.pm/search)
 - [POOLSTATS](https://poolstats.org/#)
    
-> Note: IOHK has developed a stake pool metadata aggregation server [(SMASH)](/getting-started/operating-a-stake-pool/SMASH) to provide the community with a list of verified stake pools with valid metadata. Smash is integrated with the Daedalus wallet, and users can see a list of valid stake pools in the delegation center tab.
+> Note: IOHK has developed a stake pool metadata aggregation server [(SMASH)](https://docs.cardano.org/operating-a-stake-pool/smash/) to provide the community with a list of verified stake pools with valid metadata. Smash is integrated with the Daedalus wallet, and users can see a list of valid stake pools in the delegation center tab.
